# tigrbl

./: .gitignore  .tmp_run_25281098207_jobs.json  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  Cargo.toml  README.md  SECURITY.md  cargo_metadata.json  pyproject.toml  temp_feature_list.json
bindings/python/tigrbl_native/: Cargo.toml  README.md  pyproject.toml
bindings/python/tigrbl_native/src/: callback_registry.rs  errors.rs  lib.rs  py_atoms.rs  py_engines.rs  py_handlers.rs  py_hooks.rs  py_runtime.rs  runtime_handle.rs  spec_codec.rs
bindings/python/tigrbl_native/tests/: test_fallback_boundary_trace.py
crates/tigrbl_rs_atoms/: Cargo.toml  README.md
crates/tigrbl_rs_atoms/src/: algebra.rs  atom.rs  events.rs  labels.rs  lib.rs  macros.rs  phases.rs  registry.rs  stages.rs
crates/tigrbl_rs_atoms/src/context/: base.rs  bound.rs  egress.rs  encoded.rs  error.rs  ingress.rs  mod.rs  phase_db.rs  planned.rs  resolved.rs  result.rs
crates/tigrbl_rs_atoms/src/dep/: extra.rs  mod.rs  param_resolver.rs  security.rs
crates/tigrbl_rs_atoms/src/dispatch/: binding_match.rs  binding_parse.rs  input_normalize.rs  mod.rs  op_resolve.rs
crates/tigrbl_rs_atoms/src/egress/: asgi_send.rs  envelope_apply.rs  headers_apply.rs  http_finalize.rs  mod.rs  out_dump.rs  result_normalize.rs  to_transport_response.rs
crates/tigrbl_rs_atoms/src/emit/: mod.rs  paired_post.rs  paired_pre.rs  readtime_alias.rs
crates/tigrbl_rs_atoms/src/err/: mod.rs  rollback.rs
crates/tigrbl_rs_atoms/src/ingress/: ctx_init.rs  input_prepare.rs  mod.rs  transport_extract.rs
crates/tigrbl_rs_atoms/src/python/: atom_callback.rs  mod.rs  predicate_callback.rs
crates/tigrbl_rs_atoms/src/refresh/: demand.rs  mod.rs
crates/tigrbl_rs_atoms/src/resolve/: assemble.rs  mod.rs  paired_gen.rs
crates/tigrbl_rs_atoms/src/response/: error_to_transport.rs  headers_from_payload.rs  mod.rs  negotiate.rs  negotiation.rs  render.rs  renderer.rs  template.rs  templates.rs
crates/tigrbl_rs_atoms/src/schema/: collect_in.rs  collect_out.rs  mod.rs
crates/tigrbl_rs_atoms/src/storage/: mod.rs  to_stored.rs
crates/tigrbl_rs_atoms/src/sys/: commit_tx.rs  db.rs  handler_aggregate.rs  handler_append_chunk.rs  handler_bulk_create.rs  handler_bulk_delete.rs  handler_bulk_merge.rs  handler_bulk_replace.rs  handler_bulk_update.rs  handler_checkpoint.rs  handler_clear.rs  handler_count.rs  handler_create.rs  handler_custom.rs  handler_delete.rs  handler_download.rs  handler_exists.rs  handler_group_by.rs  handler_list.rs  handler_merge.rs  handler_noop.rs  handler_persistence.rs  handler_publish.rs  handler_read.rs  handler_replace.rs  handler_send_datagram.rs  handler_subscribe.rs  handler_tail.rs  handler_update.rs  handler_upload.rs  mod.rs  oltp_context.rs  phase_db.rs  rollback.rs  start_tx.rs
crates/tigrbl_rs_atoms/src/wire/: build_in.rs  build_out.rs  dump.rs  mod.rs  validate_in.rs
crates/tigrbl_rs_atoms/tests/: atom_contract.rs
crates/tigrbl_rs_engine_inmemory/: Cargo.toml  README.md
crates/tigrbl_rs_engine_inmemory/src/: catalog.rs  column_store.rs  engine.rs  index.rs  lib.rs  lowerer.rs  row_store.rs  session.rs  snapshot.rs  table.rs  tx.rs
crates/tigrbl_rs_engine_inmemory/tests/: inmemory_engine_contract.rs
crates/tigrbl_rs_engine_postgres/: Cargo.toml  README.md
crates/tigrbl_rs_engine_postgres/src/: codec.rs  ddl.rs  engine.rs  lowerer.rs  query.rs  reflect.rs  row.rs  session.rs  tx.rs
crates/tigrbl_rs_engine_postgres/tests/: postgres_engine_contract.rs
crates/tigrbl_rs_engine_sqlite/: Cargo.toml  README.md
crates/tigrbl_rs_engine_sqlite/src/: codec.rs  ddl.rs  engine.rs  lib.rs  lowerer.rs  query.rs  reflect.rs  row.rs  session.rs  tx.rs
crates/tigrbl_rs_engine_sqlite/tests/: sqlite_engine_contract.rs
crates/tigrbl_rs_kernel/: Cargo.toml  README.md
crates/tigrbl_rs_kernel/src/: builder.rs  cache.rs  compile.rs  explain.rs  labels.rs  lib.rs  parity.rs  trace.rs
crates/tigrbl_rs_kernel/src/inject/: deps.rs  mod.rs  phase_db.rs  sys_handlers.rs
crates/tigrbl_rs_kernel/src/opt/: dead_steps.rs  hot_paths.rs  mod.rs
crates/tigrbl_rs_kernel/src/opview/: compiler.rs  mod.rs  schema_in.rs  schema_out.rs
crates/tigrbl_rs_kernel/src/plan/: hashing.rs  hot.rs  mod.rs  models.rs  packed.rs  phase.rs  segment.rs
crates/tigrbl_rs_kernel/src/route/: mod.rs  rest.rs  (+2 more)
crates/tigrbl_rs_kernel/tests/: kernel_contract.rs  parity_contract.rs
crates/tigrbl_rs_ops_olap/: Cargo.toml  README.md
crates/tigrbl_rs_ops_oltp/: Cargo.toml  README.md
crates/tigrbl_rs_ops_oltp/src/: lib.rs  params.rs
crates/tigrbl_rs_ops_oltp/tests/: ops_contract.rs
crates/tigrbl_rs_ops_realtime/: Cargo.toml  README.md
crates/tigrbl_rs_ports/: Cargo.toml  README.md
crates/tigrbl_rs_ports/src/: atoms.rs  callbacks.rs  channel.rs  engines.rs  errors.rs  handlers.rs  lib.rs  sessions.rs  transactions.rs  values.rs
crates/tigrbl_rs_ports/tests/: ports_contract.rs
crates/tigrbl_rs_runtime/: Cargo.toml  README.md
crates/tigrbl_rs_runtime/src/: config.rs  lib.rs  metrics.rs  parity.rs  request.rs  response.rs  runtime.rs  status.rs  trace.rs
crates/tigrbl_rs_runtime/tests/: channel_contract.rs  parity_contract.rs  runtime_contract.rs
crates/tigrbl_rs_spec/: Cargo.toml  README.md
crates/tigrbl_rs_spec/src/: app.rs  binding.rs  callback.rs  column.rs  engine.rs  errors.rs  field.rs  hook.rs  lib.rs  op.rs  request.rs  response.rs  storage.rs  table.rs  values.rs
crates/tigrbl_rs_spec/tests/: spec_contract.rs
examples/equivalence_contracts/: AGENTS.md  README.md  pyproject.toml
examples/equivalence_contracts/tests/: conftest.py  test_certifiable_equivalences.py
examples/transport_surface_matrix_demo/: README.md  app.py  pyproject.toml  transport_surface_matrix_demo_test.sqlite3
examples/transport_surface_matrix_demo/tests/: test_transport_surface_matrix_demo.py  test_transport_surface_matrix_demo_tigrcorn_e2e_matrix.py
examples/websocket_realtime_ops/: README.md  app.py  models.py  pyproject.toml
examples/websocket_realtime_ops/tests/: test_websocket_realtime_ops_demo.py
(+3913 files in other folders)
