[workspace]
resolver = "2"
members = [
  "crates/tigrbl_rs_spec",
  "crates/tigrbl_rs_ports",
  "crates/tigrbl_rs_atoms",
  "crates/tigrbl_rs_ops_oltp",
  "crates/tigrbl_rs_ops_olap",
  "crates/tigrbl_rs_ops_realtime",
  "crates/tigrbl_rs_kernel",
  "crates/tigrbl_rs_runtime",
  "crates/tigrbl_rs_engine_sqlite",
  "crates/tigrbl_rs_engine_postgres",
  "crates/tigrbl_rs_engine_inmemory",
  "pkgs/core/tigrbl_runtime",
]

[workspace.package]
version = "0.1.11-dev.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Jacob Stewart <jacob@swarmauri.com>"]
rust-version = "1.81"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.22", features = ["macros"] }
