[package]
name = "tigrbl_rs_atoms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust atom catalog, phase algebra, and sys handler atoms for Tigrbl."

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports" }
tigrbl_rs_spec = { path = "../tigrbl_rs_spec" }
