[package]
name = "tigrbl_rs_atoms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust atom catalog, phase algebra, and sys handler atoms for Tigrbl."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.1.12"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.12"}
