[package]
name = "tigrbl_rs_engine_inmemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust in-memory engine for Tigrbl with row-store and column-store strategies."

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports" }
tigrbl_rs_spec = { path = "../tigrbl_rs_spec" }
