[package]
name = "tigrbl_rs_engine_inmemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust in-memory engine for Tigrbl with row-store and column-store strategies."
homepage.workspace = true
repository.workspace = true

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.1.12-dev.1"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.12-dev.1"}
