[package]
name = "tigrbl_rs_engine_inmemory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust in-memory engine for Tigrbl with row-store and column-store strategies."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.4.0"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.4.0"}
