[package]
name = "tigrbl_rs_engine_sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust SQLite engine for Tigrbl."

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
tigrbl_rs_ports = { path = "../tigrbl_rs_ports" }
tigrbl_rs_spec = { path = "../tigrbl_rs_spec" }
