[package]
name = "tigrbl_rs_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust-native kernel compiler, packed plan model, and optimizer passes for Tigrbl."

[dependencies]
tigrbl_rs_atoms = { path = "../tigrbl_rs_atoms" }
tigrbl_rs_ports = { path = "../tigrbl_rs_ports" }
tigrbl_rs_spec = { path = "../tigrbl_rs_spec" }

