[package]
name = "tigrbl_rs_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust kernel compiler, packed plan model, and optimizer passes for Tigrbl."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
tigrbl_rs_atoms = { path = "../tigrbl_rs_atoms", version = "0.4.0-dev.2"}
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.4.0-dev.2"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.4.0-dev.2"}
