[package]
name = "tigrbl_rs_ops_olap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust-native OLAP analytical verb metadata for Tigrbl."

[dependencies]
tigrbl_rs_spec = { path = "../tigrbl_rs_spec" }
