[package]
name = "tigrbl_rs_ops_olap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust OLAP analytical verb metadata for Tigrbl."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.4.0"}
