[package]
name = "tigrbl_rs_ops_oltp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust OLTP CRUD and bulk handler semantics for Tigrbl."

[dependencies]
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.1.10-dev.1"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.10-dev.1"}
