[package]
name = "tigrbl_rs_ops_realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust realtime, stream, transfer, and datagram verb metadata for Tigrbl."

[dependencies]
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.8-dev.1"}
