[package]
name = "tigrbl_rs_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust runtime and executor for compiled Tigrbl kernel plans."

[dependencies]
tigrbl_rs_atoms = { path = "../tigrbl_rs_atoms", version = "0.1.11-dev.2"}
tigrbl_rs_engine_inmemory = { path = "../tigrbl_rs_engine_inmemory", version = "0.1.11-dev.2"}
tigrbl_rs_engine_postgres = { path = "../tigrbl_rs_engine_postgres", version = "0.1.11-dev.2"}
tigrbl_rs_engine_sqlite = { path = "../tigrbl_rs_engine_sqlite", version = "0.1.11-dev.2"}
tigrbl_rs_kernel = { path = "../tigrbl_rs_kernel", version = "0.1.11-dev.2"}
tigrbl_rs_ops_oltp = { path = "../tigrbl_rs_ops_oltp", version = "0.1.11-dev.2"}
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.1.11-dev.2"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.11-dev.2"}
