[package]
name = "tigrbl_rs_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust runtime and executor for compiled Tigrbl kernel plans."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
tigrbl_rs_atoms = { path = "../tigrbl_rs_atoms", version = "0.1.12"}
tigrbl_rs_engine_inmemory = { path = "../tigrbl_rs_engine_inmemory", version = "0.1.12"}
tigrbl_rs_engine_postgres = { path = "../tigrbl_rs_engine_postgres", version = "0.1.12"}
tigrbl_rs_engine_sqlite = { path = "../tigrbl_rs_engine_sqlite", version = "0.1.12"}
tigrbl_rs_kernel = { path = "../tigrbl_rs_kernel", version = "0.1.12"}
tigrbl_rs_ops_oltp = { path = "../tigrbl_rs_ops_oltp", version = "0.1.12"}
tigrbl_rs_ports = { path = "../tigrbl_rs_ports", version = "0.1.12"}
tigrbl_rs_spec = { path = "../tigrbl_rs_spec", version = "0.1.12"}
