[package]
name = "tigrbl_rs_spec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Canonical Rust Tigrbl spec IR and datatype model."
homepage = "https://github.com/tigrbl/tigrbl"
repository = "https://github.com/tigrbl/tigrbl"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
