[project]
name = "tigrbl-equivalence-contracts"
version = "0.0.0+local"
description = "Local runtime demonstrations for certifiable Tigrbl equivalence claims."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "tigrbl-core",
]

[tool.uv]
package = true

[tool.uv.sources]
"tigrbl-core" = { path = "../../pkgs/core/tigrbl_core", editable = true }
"tigrbl-typing" = { path = "../../pkgs/core/tigrbl_typing", editable = true }
"tigrbl_spec" = { path = "../../pkgs/core/tigrbl_spec", editable = true }

[tool.tigrbl]
publish = false
purpose = "local-certification-demo"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tigrbl_equivalence_contracts"]
