[project]
name = "tigrbl-websocket-realtime-ops-demo"
version = "0.1.0"
description = "Tigrbl WebSocket realtime JSON-RPC framework declaration example."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "tigrbl",
  "tigrbl-core",
  "uvicorn",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.uv.sources]
tigrbl = { path = "../../pkgs/core/tigrbl", editable = true }
tigrbl-core = { path = "../../pkgs/core/tigrbl_core", editable = true }

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
testpaths = [
  "tests",
]
