[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tigrbl-native"
version = "0.1.0"
description = "Python bridge for the Rust-native Tigrbl kernel and runtime."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Jacob Stewart", email = "jacob@swarmauri.com" }]
dependencies = []

[tool.maturin]
module-name = "tigrbl_native._native"
python-source = "python"
features = ["pyo3/extension-module"]
